Fixed alignment issues of Music and Info. Began Styling upgrades.

--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+body {
+	background-color: rgb(244, 242, 242);
+}
 
 #logobox {
 	height: auto;
 	width: auto;
 	text-align: center;
+	border-radius: 10px;
+  	box-shadow: 5px 5px 5px rgb(206, 206, 206);
+	background-color: white;
 }
 
 .logo {
@@ -71,15 +77,35 @@ button:hover {
 	background-color: #D3D3D3;
 	padding: 10px 10px 10px 10px;
 }
-	
+
+/* Music Videos-----------------------*/
+.video-grid {
+	text-align: center;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
 
 .video-grid iframe {
   width: 100%;
-  max-width: 560px; /* or whatever max width you want */
-  height: 315px; /* standard 16:9 ratio */
+  max-width: 672px; /* or whatever max width you want */
+  height: 378px; /* standard 16:9 ratio */
   border: none;
+  border-radius: 10px;
+  box-shadow: 5px 5px 5px rgb(206, 206, 206);
 }
-	
+
+/* Info Page -----------------------*/
+.info {
+    text-align: center;
+	max-width: 400px;
+	border-radius: 10px;
+  	box-shadow: 5px 5px 5px rgb(206, 206, 206);
+  	padding: 20px;
+  	background-color: white;
+    }
+
+/* Footer -----------------------*/	
 footer {
 	background-color: #21409A;
 	color: #FFFFFF;
@@ -115,6 +141,7 @@ footer a:visited {
 		display: block;
 		background-color: #21409A;
 		border-style: none;
+		border-radius: 5px;
 		font-size:100%;
 		color: #FFFFFF;
 		line-height: 2.0;
